# agentic-playground

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/agents/: chatbot.py
app/api/: agents.py
app/models/: __init__.py  agent.py  agent_create.py  file.py  website.py
app/routers/: agent_router.py
app/schemas/: agent_create.py  agent_dto.py  agent_post.py  website.py
app/services/: agent_service.py  file_service.py
docs/: Agents.postman_collection.json  openapi3_1.yaml  prd.md  requirements.md
tests/: test_agents.py
