[project]
name = "aibots-research-agent"
version = "0.1.0"
description = "Agentic workflow for research"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.1.3",
    "beanie>=1.29.0",
    "fastapi[standard]>=0.115.8",
    "langchain-community>=0.3.17",
    "langchain-openai>=0.3.5",
    "langgraph>=0.2.71",
    "langsmith>=0.3.8",
    "python-dotenv>=1.0.1",
]
