[project]
name = "aibots-research-agent"
version = "0.1.0"
description = "Agentic workflow for research"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.1.3",
    "beanie>=1.29.0",
    "duckduckgo-search>=7.3.2",
    "fastapi[standard]>=0.115.8",
    "langchain-community>=0.3.17",
    "langchain-openai>=0.3.5",
    "langgraph>=0.2.71",
    "langsmith>=0.3.8",
    "nltk==3.8.1",
    "poppler-utils>=0.1.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "unstructured[docx,pdf,pptx]>=0.14.8",
    "wikipedia>=1.4.0",
    "xmltodict>=0.14.2",
]
