[project]
name = "agentic-playground"
version = "0.1.0"
description = "Agentic playground for research"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.1.3",
    "beanie>=1.29.0",
    "courlan>=1.3.2",
    "duckduckgo-search>=7.3.2",
    "fastapi[standard]>=0.115.8",
    "langchain-community>=0.3.17",
    "langchain-openai>=0.3.5",
    "langgraph>=0.2.71",
    "langsmith>=0.3.8",
    "nltk==3.8.1",
    "olefile>=0.47",
    "poppler-utils>=0.1.0",
    "psutil>=7.0.0",
    "pydantic-settings>=2.7.1",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "python-oxmsg>=0.0.2",
    "tiktoken>=0.8.0",
    "unstructured>=0.14.8",
    "wikipedia>=1.4.0",
    "xmltodict>=0.14.2",
]
